--- a/dev/src/layouts/About.astro
+++ b/dev/src/layouts/About.astro
@@ -3,12 +3,11 @@ import type { CollectionEntry } from 'astro:content'
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
-import FormattedDate from '../components/FormattedDate.astro'
 import { SITE_LANGUAGE } from '../consts'
 
 type Props = CollectionEntry<'blog'>['data']
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props
+const { title, description, heroImage } = Astro.props
 ---
 
 <html lang={SITE_LANGUAGE}>
@@ -35,14 +34,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
       <article>
         {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
         <h1 class="title">{title}</h1>
-        <FormattedDate date={pubDate} />
-        {
-          updatedDate && (
-            <div class="last-updated-on">
-              Last updated on <FormattedDate date={updatedDate} />
-            </div>
-          )
-        }
+        <p><a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a href="https://twitter.com/reona_5">reona5</a> のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。</p>
         <hr />
         <slot />
       </article>
