--- a/dev/src/styles/global.css
+++ b/dev/src/styles/global.css
@@ -4,7 +4,7 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 body {
-	font-family: Verdana, sans-serif;
+	font-family: JetBrains Mono;
 	margin: auto;
 	padding: 20px;
 	max-width: 65ch;
