--- a/dev/src/components/FormattedDate.astro
+++ b/dev/src/components/FormattedDate.astro
@@ -1,13 +1,13 @@
 ---
-const { date } = Astro.props;
+const { date } = Astro.props
 ---
 
-<time datetime={date.toISOString()}>
-	{
-		date.toLocaleDateString('en-us', {
-			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
-		})
-	}
+<time datetime={date}>
+  {
+    date.toLocaleDateString('ja-jp', {
+      year: 'numeric',
+      month: 'short',
+      day: 'numeric',
+    })
+  }
 </time>
