--- a/dev/src/layouts/About.astro
+++ b/dev/src/layouts/About.astro
@@ -5,7 +5,7 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_LANGUAGE } from '../consts'
 
-type Props = CollectionEntry<'blog'>['data']
+type Props = CollectionEntry<'posts'>['data']
 
 const { title, description, heroImage } = Astro.props
 ---
@@ -34,7 +34,11 @@ const { title, description, heroImage } = Astro.props
       <article>
         {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
         <h1 class="title">{title}</h1>
-        <p><a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a href="https://twitter.com/reona_5">reona5</a> のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。</p>
+        <p>
+          <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
+            href="https://twitter.com/reona_5">reona5</a
+          > のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。
+        </p>
         <hr />
         <slot />
       </article>
