--- a/dev/src/layouts/BlogPost.astro
+++ b/dev/src/layouts/BlogPost.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro'
 import FormattedDate from '../components/FormattedDate.astro'
 import { SITE_LANGUAGE } from '../consts'
 
-type Props = CollectionEntry<'blog'>['data']
+type Props = CollectionEntry<'posts'>['data']
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props
 ---
