--- a/dev/src/layouts/BlogPost.astro
+++ b/dev/src/layouts/BlogPost.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource/inter'
+import '@fontsource/fira-code'
 import type { CollectionEntry } from 'astro:content'
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
@@ -14,28 +16,15 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
 <html lang={SITE_LANGUAGE}>
   <head>
     <BaseHead title={title} description={description} />
-    <style>
-      .title {
-        font-size: 2em;
-        margin: 0.25em 0 0;
-      }
-      hr {
-        border-top: 1px solid #ddd;
-        margin: 1rem 0;
-      }
-      .last-updated-on {
-        font-style: italic;
-      }
-    </style>
   </head>
 
-  <body>
+  <body class="font-inter">
     <Header />
-    <main>
-      <article>
+    <main class="m-auto max-w-4xl p-6">
+      <article class="prose prose-xl">
         {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
-        <h1 class="title">{title}</h1>
         <FormattedDate date={pubDate} />
+        <h1>{title}</h1>
         {
           updatedDate && (
             <div class="last-updated-on">
