--- a/dev/src/pages/index.astro
+++ b/dev/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "@fontsource/inter";
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
@@ -10,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body>
+  <body class="font-inter">
     <Header title={SITE_TITLE} />
     <main>
       <h1>🧑‍🚀 Hello, Astronaut!</h1>
