--- a/dev/src/pages/posts/index.astro
+++ b/dev/src/pages/posts/index.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource/inter'
 import BaseHead from '../../components/BaseHead.astro'
 import Header from '../../components/Header.astro'
 import Footer from '../../components/Footer.astro'
@@ -25,7 +26,6 @@ const posts = (await getCollection('posts')).sort(
       }
       ul li :global(time) {
         flex: 0 0 130px;
-        font-style: italic;
         color: #595959;
       }
       ul li a:visited {
@@ -33,7 +33,7 @@ const posts = (await getCollection('posts')).sort(
       }
     </style>
   </head>
-  <body>
+  <body class="font-inter">
     <Header />
     <main>
       <section>
