--- a/dev/src/pages/posts/index.astro
+++ b/dev/src/pages/posts/index.astro
@@ -35,7 +35,7 @@ const posts = (await getCollection('posts')).sort(
   </head>
   <body class="font-inter">
     <Header />
-    <main>
+    <main class="m-auto max-w-4xl p-6">
       <section>
         <ul>
           {
