--- a/dev/src/layouts/About.astro
+++ b/dev/src/layouts/About.astro
@@ -5,6 +5,7 @@ import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_LANGUAGE } from '../consts'
+import { Image } from '@astrojs/image/components'
 
 type Props = CollectionEntry<'posts'>['data']
 
@@ -18,9 +19,9 @@ const { title, description, heroImage } = Astro.props
 
   <body class="font-inter">
     <Header />
-    <main class="m-auto max-w-4xl p-6">
+    <main class="m-auto max-w-4xl p-8">
       <section class="prose max-w-none">
-        {heroImage && <img src={heroImage} alt="" />}
+        {heroImage && <Image src={heroImage} alt="" width={4500} height={2532} format="jpg" class="pb-8"  />}
         <h1 class="title">{title}</h1>
         <p>
           <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
