--- a/dev/src/pages/index.astro
+++ b/dev/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/inter";
+import '@fontsource/inter'
 import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
   </head>
   <body class="font-inter">
     <Header title={SITE_TITLE} />
-    <main>
+    <main class="m-auto max-w-4xl p-8">
       <h1>🧑‍🚀 Hello, Astronaut!</h1>
       <p>
         Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
@@ -34,15 +34,16 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
           Edit the site header items in <code>src/components/Header.astro</code>
         </li>
         <li>
-          Add your name to the footer in <code
-            >src/components/Footer.astro</code>
+          Add your name to the footer in <code>src/components/Footer.astro</code
+          >
         </li>
         <li>
           Check out the included blog posts in <code>src/pages/blog/</code>
         </li>
         <li>
           Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code>
+            >src/layouts/BlogPost.astro</code
+          >
         </li>
       </ul>
       <p>
