--- a/dev/src/pages/index.astro
+++ b/dev/src/pages/index.astro
@@ -4,6 +4,12 @@ import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
+import { getCollection } from 'astro:content'
+import FormattedDate from '../components/FormattedDate.astro'
+
+const posts = (await getCollection('posts'))
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+  .slice(0, 5)
 ---
 
 <!DOCTYPE html>
@@ -13,52 +19,28 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
   </head>
   <body class="font-inter">
     <Header title={SITE_TITLE} />
-    <main class="m-auto max-w-4xl p-8">
-      <h1>🧑‍🚀 Hello, Astronaut!</h1>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-        template. This template serves as a lightweight, minimally-styled starting
-        point for anyone looking to build a personal website, blog, or portfolio
-        with Astro.
-      </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add
-        tools like Tailwind, React, or Vue to your project.
-      </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>
-          Edit the site header items in <code>src/components/Header.astro</code>
-        </li>
-        <li>
-          Add your name to the footer in <code>src/components/Footer.astro</code
-          >
-        </li>
-        <li>
-          Check out the included blog posts in <code>src/pages/blog/</code>
-        </li>
-        <li>
-          Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code
-          >
-        </li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to <a
-          href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask
-        questions.
-      </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-      </p>
+    <main class="m-auto max-w-4xl p-8 grid gap-12">
+      <section>
+        <h2 class="text-2xl font-bold my-2">Hello, I'm Reona Shimada👋</h2>
+        <p>
+          プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
+        </p>
+      </section>
+      <section>
+        <ol class="grid gap-8 mb-8">
+          {
+            posts.map(post => (
+              <li class="grid">
+                <FormattedDate date={post.data.pubDate} />
+                <a href={`/posts/${post.slug}/`} class="text-lg">
+                  {post.data.title}
+                </a>
+              </li>
+            ))
+          }
+        </ol>
+        <a href="/posts" class="text-lg underline">＞ 記事一覧へ</a>
+      </section>
     </main>
     <Footer />
   </body>
