--- a/dev/src/pages/about.astro
+++ b/dev/src/pages/about.astro
@@ -7,7 +7,7 @@ import { SITE_DESCRIPTION } from '../consts'
   title="このサイトについて"
   description={SITE_DESCRIPTION}
   pubDate={new Date('February 26 2023')}
-  heroImage="/placeholder-about.jpg"
+  heroImage="/assets/placeholder-about.jpg"
 >
   <h2 class="title">筆者について</h2>
   <p>
