--- a/dev/src/layouts/About.astro
+++ b/dev/src/layouts/About.astro
@@ -5,7 +5,7 @@ import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_LANGUAGE } from '../consts'
-import { Image } from '@astrojs/image/components'
+import { Image } from 'astro:assets'
 
 type Props = CollectionEntry<'posts'>['data']
 
@@ -28,7 +28,6 @@ const { title, description, heroImage } = Astro.props
               alt=""
               width={4500}
               height={2532}
-              format="jpg"
               class="pb-8"
             />
           )
