--- a/dev/src/layouts/BlogPost.astro
+++ b/dev/src/layouts/BlogPost.astro
@@ -6,6 +6,7 @@ import BaseHead from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import FormattedDate from '../components/FormattedDate.astro'
+import { Image } from 'astro:assets'
 import { SITE_LANGUAGE } from '../consts'
 
 type Props = CollectionEntry<'posts'>['data']
@@ -22,7 +23,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
     <Header />
     <main class="m-auto max-w-4xl p-8">
       <article class="prose max-w-none">
-        {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
+        {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
         <FormattedDate date={pubDate} />
         <h1>{title}</h1>
         {
