--- a/dev/src/components/BaseHead.astro
+++ b/dev/src/components/BaseHead.astro
@@ -13,8 +13,15 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
+
+ <!-- Chrome / Firefox / Edge -->
+<link
+  rel="icon"
+  href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%%22 y=%2250%%22 style=%22dominant-baseline:central;text-anchor:middle;font-size:90px;%22>🫰</text></svg>"
+/>
+ <!-- Safari / IE -->
+ <link rel="icon alternate" type="image/png" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1faf0.png" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
