style: Add underline for posts title

--- a/dev/src/pages/index.astro
+++ b/dev/src/pages/index.astro
@@ -32,7 +32,7 @@ const posts = (await getCollection('posts'))
             posts.map(post => (
               <li class="grid">
                 <FormattedDate date={post.data.pubDate} />
-                <a href={`/posts/${post.slug}/`} class="text-lg">
+                <a href={`/posts/${post.slug}/`} class="text-lg underline">
                   {post.data.title}
                 </a>
               </li>
