--- a/dev/src/pages/posts/index.astro
+++ b/dev/src/pages/posts/index.astro
@@ -26,7 +26,7 @@ const posts = (await getCollection('posts')).sort(
           posts.map(post => (
             <li class="grid">
               <FormattedDate date={post.data.pubDate} />
-              <a href={`/posts/${post.slug}/`} class="text-lg">
+              <a href={`/posts/${post.slug}/`} class="text-lg underline">
                 {post.data.title}
               </a>
             </li>
