--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,6 +31,9 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
+<!-- Script for Vercel Analytics -->
+<script defer src="/_vercel/insights/script.js"></script>
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
