--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,19 @@
 ---
-import { Image } from "astro:assets";
-import rssIcon from "../assets/rss-icon.png";
-import twitterIcon from "../assets/twitter-icon.png";
-import githubIcon from "../assets/github-black-icon.png";
-
 const headerItems = [
   {
     name: "RSS",
     href: "/rss.xml",
-    imagePath: rssIcon,
+    imagePath: "rss-icon.svg",
   },
   {
     name: "Twitter",
     href: "https://twitter.com/reona_5",
-    imagePath: twitterIcon,
+    imagePath: "twitter-icon.svg",
   },
   {
     name: "GitHub",
     href: "https://github.com/reona5",
-    imagePath: githubIcon,
+    imagePath: "github-black-icon.svg",
   },
 ];
 const today = new Date();
@@ -35,7 +30,7 @@ const today = new Date();
           <li>
             <a href={item.href} target="_blank">
               {item.imagePath ? (
-                <Image
+                <img
                   src={item.imagePath}
                   width={24}
                   alt={`${item.name} icon`}
