--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,13 +1,13 @@
 ---
-const { date } = Astro.props
+const { date } = Astro.props;
 ---
 
 <time datetime={date}>
   {
-    date.toLocaleDateString('ja-jp', {
-      year: 'numeric',
-      month: 'short',
-      day: 'numeric',
+    date.toLocaleDateString("ja-jp", {
+      year: "numeric",
+      month: "short",
+      day: "numeric",
     })
   }
 </time>
