--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -1,15 +1,15 @@
 ---
-import '@fontsource/inter'
-import type { CollectionEntry } from 'astro:content'
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import { SITE_LANGUAGE } from '../consts'
-import { Image } from 'astro:assets'
+import "@fontsource/inter";
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_LANGUAGE } from "../consts";
+import { Image } from "astro:assets";
 
-type Props = CollectionEntry<'posts'>['data']
+type Props = CollectionEntry<"posts">["data"];
 
-const { title, description, heroImage } = Astro.props
+const { title, description, heroImage } = Astro.props;
 ---
 
 <html lang={SITE_LANGUAGE}>
@@ -21,17 +21,7 @@ const { title, description, heroImage } = Astro.props
     <Header currentPage="About" />
     <main class="m-auto max-w-4xl p-8">
       <section class="prose max-w-none">
-        {
-          heroImage && (
-            <Image
-              src={heroImage}
-              alt=""
-              width={4500}
-              height={2532}
-              class="pb-8"
-            />
-          )
-        }
+        {heroImage && <Image src={heroImage} alt="" width={850} class="pb-8" />}
         <h1 class="title">{title}</h1>
         <p>
           <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
