--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,17 +1,17 @@
 ---
-import '@fontsource/inter'
-import '@fontsource/fira-code'
-import type { CollectionEntry } from 'astro:content'
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import FormattedDate from '../components/FormattedDate.astro'
-import { Image } from 'astro:assets'
-import { SITE_LANGUAGE } from '../consts'
+import "@fontsource/inter";
+import "@fontsource/fira-code";
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
+import { Image } from "astro:assets";
+import { SITE_LANGUAGE } from "../consts";
 
-type Props = CollectionEntry<'posts'>['data']
+type Props = CollectionEntry<"posts">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props
+const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang={SITE_LANGUAGE}>
