--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,6 @@
 ---
+import { isGaIdExists, GoogleAnalytics } from "../lib/gtag"
+
 export interface Props {
   title: string;
   description: string;
@@ -6,9 +8,11 @@ export interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
 const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 ---
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+{ isGaIdExists && <GoogleAnalytics /> }
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
