--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,17 +3,17 @@ const headerItems = [
   {
     name: "RSS",
     href: "/rss.xml",
-    imagePath: "rss-icon.svg",
+    imagePath: "/rss-icon.svg",
   },
   {
     name: "Twitter",
     href: "https://twitter.com/reona_5",
-    imagePath: "twitter-icon.svg",
+    imagePath: "/twitter-icon.svg",
   },
   {
     name: "GitHub",
     href: "https://github.com/reona5",
-    imagePath: "github-black-icon.svg",
+    imagePath: "/github-black-icon.svg",
   },
 ];
 const today = new Date();
@@ -33,6 +33,7 @@ const today = new Date();
                 <img
                   src={item.imagePath}
                   width={24}
+                  height={24}
                   alt={`${item.name} icon`}
                 />
               ) : (
