--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
   <body class="font-inter">
     <Header />
     <main class="m-auto max-w-4xl p-8">
-      <article class="prose max-w-none">
+      <article class="prose max-w-none break-words">
         {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
         <FormattedDate date={pubDate} />
         <h1>{title}</h1>
