--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import { SITE_DESCRIPTION } from "../consts";
   description={SITE_DESCRIPTION}
   pubDate={new Date("February 26 2023")}
 >
-  <h2 class="title">筆者について</h2>
+  <h2>筆者について</h2>
   <p>
     1994年5月生まれ。第一三共株式会社にて MR として数年勤めたのち、Web
     サービスの開発に興味を持ち2019年8月にキャリアチェンジしました。現在はメドピア株式会社に所属しております。
