--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
@@ -9,7 +9,6 @@ export async function getStaticPaths() {
     props: post,
   }));
 }
-type Props = CollectionEntry<"posts">;
 
 const post = Astro.props;
 const { Content } = await post.render();
