--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,11 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 ---
 
-<script defer src="/_vercel/insights/script.js"></script>
+{
+  import.meta.env.VERCEL_ANALYTICS_ID && (
+    <script defer src="/_vercel/insights/script.js" />
+  )
+}
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
