--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,15 +19,15 @@ const posts = (await getCollection('posts'))
   </head>
   <body class="font-inter">
     <Header title={SITE_TITLE} />
-    <main class="m-auto max-w-4xl p-8 grid gap-12">
+    <main class="m-auto grid max-w-4xl gap-12 p-8">
       <section>
-        <h2 class="text-2xl font-bold my-2">Hello, I'm Reona Shimada👋</h2>
+        <h2 class="my-2 text-2xl font-bold">Hello, I'm Reona Shimada👋</h2>
         <p>
           プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
         </p>
       </section>
       <section>
-        <ol class="grid gap-8 mb-8">
+        <ol class="mb-8 grid gap-8">
           {
             posts.map(post => (
               <li class="grid">
