refactor: Separate layout files more finely

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,39 +1,25 @@
 ---
-import "@fontsource/inter";
 import "@fontsource/fira-code";
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseLayout from "./BaseLayout.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import { Image } from "astro:assets";
-import { SITE_LANGUAGE } from "../consts";
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
-<html lang={SITE_LANGUAGE}>
-  <head>
-    <BaseHead title={title} description={description} />
-  </head>
-
-  <body class="font-inter">
-    <Header />
-    <main class="m-auto max-w-4xl p-8">
-      <article class="prose max-w-none break-words">
-        {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
-        <FormattedDate date={pubDate} />
-        <h1>{title}</h1>
-        {
-          updatedDate && (
-            <p>
-              Last updated on <FormattedDate date={updatedDate} />
-            </p>
-          )
-        }
-        <hr />
-        <slot />
-      </article>
-    </main>
-    <Footer />
-  </body>
-</html>
+<BaseLayout title={title} description={description}>
+  <article class="prose max-w-none break-words">
+    {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
+    <FormattedDate date={pubDate} />
+    <h1>{title}</h1>
+    {
+      updatedDate && (
+        <p>
+          Last updated on <FormattedDate date={updatedDate} />
+        </p>
+      )
+    }
+    <hr />
+    <slot />
+  </article>
+</BaseLayout>
