--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -1,36 +1,22 @@
 ---
-import "@fontsource/inter";
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import { SITE_LANGUAGE } from "../consts";
+import BaseLayout from "./BaseLayout.astro";
 import { Image } from "astro:assets";
 import aboutImage from "../assets/placeholder-about.jpg";
 
 const { title, description } = Astro.props;
 ---
 
-<html lang={SITE_LANGUAGE}>
-  <head>
-    <BaseHead title={title} description={description} />
-  </head>
-
-  <body class="font-inter">
-    <Header currentPage="About" />
-    <main class="m-auto max-w-4xl p-8">
-      <section class="prose max-w-none">
-        <Image src={aboutImage} alt="" width={850} height={478} class="pb-8" />
-        <h1>{title}</h1>
-        <p>
-          <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
-            href="https://twitter.com/reona_5"
-            target="_blank">Reona Shimada</a
-          > のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。
-        </p>
-        <hr />
-        <slot />
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+<BaseLayout title={title} description={description}>
+  <section class="prose max-w-none">
+    <Image src={aboutImage} alt="" width={850} height={478} class="pb-8" />
+    <h1>{title}</h1>
+    <p>
+      <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
+        href="https://twitter.com/reona_5"
+        target="_blank">Reona Shimada</a
+      > のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。
+    </p>
+    <hr />
+    <slot />
+  </section>
+</BaseLayout>
