--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,11 +3,7 @@ import Layout from "../layouts/About.astro";
 import { SITE_DESCRIPTION } from "../consts";
 ---
 
-<Layout
-  title="このサイトについて"
-  description={SITE_DESCRIPTION}
-  pubDate={new Date("February 26 2023")}
->
+<Layout title="このサイトについて" description={SITE_DESCRIPTION}>
   <h2>筆者について</h2>
   <p>
     1994年5月生まれ。第一三共株式会社にて MR として数年勤めたのち、Web
