--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,9 +1,9 @@
 ---
-export interface Props {
+export type Props = {
   title: string;
   description: string;
   image?: string;
-}
+};
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
