--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,8 +1,9 @@
 ---
+export type Props = { date: Date }
 const { date } = Astro.props;
 ---
 
-<time datetime={date}>
+<time datetime={date.toISOString()}>
   {
     date.toLocaleDateString("ja-jp", {
       year: "numeric",
