--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,14 @@
 ---
 import { SITE_TITLE } from "../consts";
-
 const headerItems = [
-  {
-    name: "Posts",
-    href: "/posts",
-  },
-  {
-    name: "About",
-    href: "/about",
-  },
+  { name: "Posts", href: "/posts" },
+  { name: "About", href: "/about" },
 ] as const;
-type Item = typeof headerItems[number]["name"];
+export type HeaderItem = (typeof headerItems)[number]["name"];
+export type Props = { currentPage?: HeaderItem };
+
 const { currentPage } = Astro.props;
+type Item = (typeof headerItems)[number]["name"];
 const isCurrent = (item: Item) => item === currentPage;
 const ariaCurrent: { "aria-current": "page" | undefined } = {
   "aria-current": "page",
@@ -20,7 +16,7 @@ const ariaCurrent: { "aria-current": "page" | undefined } = {
 ---
 
 <header class="m-auto max-w-4xl">
-  <a href="/" class="absolute m-8 text-2xl">{SITE_TITLE}</a>
+  <a href="/" class="absolute m-8 text-xl">{SITE_TITLE}</a>
   <nav class="flex justify-end p-8">
     <ul class="flex justify-end gap-4 text-lg">
       {
