--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -3,6 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 import { Image } from "astro:assets";
 import aboutImage from "../assets/placeholder-about.jpg";
 
+export type Props = { title: string; description: string };
 const { title, description } = Astro.props;
 ---
 
