--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,7 +3,9 @@ import "@fontsource/fira-code";
 import BaseLayout from "./BaseLayout.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import { Image } from "astro:assets";
+import type { CollectionEntry } from "astro:content";
 
+export type Props = CollectionEntry<"posts">["data"];
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
