--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,39 +1,29 @@
 ---
-import '@fontsource/inter'
-import BaseHead from '../../components/BaseHead.astro'
-import Header from '../../components/Header.astro'
-import Footer from '../../components/Footer.astro'
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../../consts'
-import { getCollection } from 'astro:content'
-import FormattedDate from '../../components/FormattedDate.astro'
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import { getCollection } from "astro:content";
+import FormattedDate from "../../components/FormattedDate.astro";
 
-const posts = (await getCollection('posts')).sort(
+const posts = (await getCollection("posts")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-)
+);
 ---
 
-<!DOCTYPE html>
-<html lang={SITE_LANGUAGE}>
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body class="font-inter">
-    <Header currentPage="Posts" />
-    <main class="m-auto max-w-4xl p-8">
-      <h1 class="mb-8 text-3xl font-bold">記事一覧</h1>
-      <ol class="grid gap-8">
-        {
-          posts.map(post => (
-            <li class="grid">
-              <FormattedDate date={post.data.pubDate} />
-              <a href={`/posts/${post.slug}/`} class="text-lg underline">
-                {post.data.title}
-              </a>
-            </li>
-          ))
-        }
-      </ol>
-    </main>
-    <Footer />
-  </body>
-</html>
+<BaseLayout
+  title="記事一覧"
+  description="ブログ記事一覧です。"
+  currentPage="Posts"
+>
+  <h1 class="mb-8 text-3xl font-bold">記事一覧</h1>
+  <ol class="grid gap-8">
+    {
+      posts.map((post) => (
+        <li class="grid">
+          <FormattedDate date={post.data.pubDate} />
+          <a href={`/posts/${post.slug}/`} class="text-lg underline">
+            {post.data.title}
+          </a>
+        </li>
+      ))
+    }
+  </ol>
+</BaseLayout>
