--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -14,7 +14,8 @@ const { title, description } = Astro.props;
     <p>
       <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
         href="https://twitter.com/reona_5"
-        target="_blank">Reona Shimada</a
+        target="_blank"
+        rel="noreferrer">Reona Shimada</a
       > のプログラミングに関する学びや日々の出来事を発信するウェブサイトです。
     </p>
     <hr />
