--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,12 +28,14 @@ const today = new Date();
       {
         footerItems.map((item) => (
           <li>
-            <a href={item.href} target="_blank">
+            <a href={item.href} target="_blank" rel="noreferrer">
               <img
                 src={item.imagePath}
                 width={24}
                 height={24}
                 alt={`${item.name} icon`}
+                loading="lazy"
+                decoding="async"
               />
             </a>
           </li>
