--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,19 @@
 ---
-import '@fontsource/inter'
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from '../consts'
-import { getCollection } from 'astro:content'
-import FormattedDate from '../components/FormattedDate.astro'
+import "@fontsource/inter";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from "../consts";
+import { getCollection } from "astro:content";
+import FormattedDate from "../components/FormattedDate.astro";
 
-const posts = (await getCollection('posts'))
+const posts = (
+  await getCollection("posts", ({ data }) => {
+    return data.draft !== true;
+  })
+)
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
-  .slice(0, 5)
+  .slice(0, 5);
 ---
 
 <!DOCTYPE html>
@@ -27,7 +31,7 @@ const posts = (await getCollection('posts'))
       <section>
         <ol class="mb-8 grid gap-8">
           {
-            posts.map(post => (
+            posts.map((post) => (
               <li class="grid">
                 <FormattedDate date={post.data.pubDate} />
                 <a href={`/posts/${post.slug}/`} class="text-lg underline">
