--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -7,7 +7,7 @@ export type Props = { title: string; description: string };
 const { title, description } = Astro.props;
 ---
 
-<BaseLayout title={title} description={description}>
+<BaseLayout title={title} description={description} currentPage="About">
   <section class="prose max-w-none">
     <Image src={aboutImage} alt="" width={850} height={478} class="pb-8" />
     <h1>{title}</h1>
