style: Fix top page styles a little bit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,11 +23,13 @@ const posts = (
   </head>
   <body class="font-inter">
     <Header />
-    <main class="m-auto grid max-w-4xl gap-12 p-8">
-      <h2 class="my-2 text-2xl font-bold">Hello, I'm Reona Shimada👋</h2>
-      <p>
-        プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
-      </p>
+    <main class="m-auto max-w-4xl p-8">
+      <section class="mb-10 grid gap-4">
+        <h2 class="text-xl font-bold">Hello, I'm Reona Shimada👋</h2>
+        <p>
+          プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
+        </p>
+      </section>
       <section>
         <ol class="mb-8 grid gap-8">
           {
