style: Add current item on each post pages header to aria-current attribute

--- a/src/pages/drafts/[...slug].astro
+++ b/src/pages/drafts/[...slug].astro
@@ -18,6 +18,6 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogPost {...post.data}>
+<BlogPost {...post.data} currentPage="Drafts">
   <Content />
 </BlogPost>
