--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,12 +4,13 @@ import BaseLayout from "./BaseLayout.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
+import type { HeaderItem } from "../components/Header.astro";
 
-export type Props = CollectionEntry<"posts">["data"];
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+export type Props = CollectionEntry<"posts">["data"] & { currentPage?: HeaderItem };
+const { title, description, pubDate, updatedDate, heroImage, currentPage } = Astro.props;
 ---
 
-<BaseLayout title={title} description={description}>
+<BaseLayout title={title} description={description} currentPage={currentPage}>
   <article class="prose max-w-none break-words">
     {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
     <FormattedDate date={pubDate} />
