--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -16,16 +16,20 @@ const posts = (
   currentPage="Posts"
 >
   <h1 class="mb-8 text-3xl font-bold">記事一覧</h1>
-  <ol class="grid gap-8">
-    {
-      posts.map((post) => (
-        <li class="grid">
-          <FormattedDate date={post.data.pubDate} />
-          <a href={`/posts/${post.slug}/`} class="text-lg underline">
-            {post.data.title}
-          </a>
-        </li>
-      ))
-    }
-  </ol>
+  {
+    posts.length !== 0 ? (
+      <ol class="grid gap-8">
+        {posts.map((post) => (
+          <li class="grid">
+            <FormattedDate date={post.data.pubDate} />
+            <a href={`/posts/${post.slug}/`} class="text-lg underline">
+              {post.data.title}
+            </a>
+          </li>
+        ))}
+      </ol>
+    ) : (
+      <p class="text-xl">📝 記事はありません。</p>
+    )
+  }
 </BaseLayout>
