--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 ---
+import MenuIcon from "./MenuIcon.astro";
 import { SITE_TITLE } from "../consts";
 const headerItems = [
   { name: "About", href: "/about" },
@@ -16,23 +17,44 @@ const ariaCurrent: { "aria-current": "page" | undefined } = {
 };
 ---
 
-<header class="m-auto max-w-4xl">
-  <a href="/" class="absolute m-8 text-xl">{SITE_TITLE}</a>
-  <nav class="flex justify-end p-8">
-    <ul class="flex justify-end gap-3 text-lg">
-      {
-        headerItems.map((item) => (
-          <li>
-            <a
-              href={item.href}
-              class={isCurrentItem(item.name) ? "underline" : undefined}
-              {...(isCurrentItem(item.name) && ariaCurrent)}
-            >
-              {item.name}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-  </nav>
+<header class="sticky top-0 bg-white sm:static">
+  <div class="m-auto flex max-w-4xl items-center justify-between p-6">
+    <a href="/" class="text-xl">{SITE_TITLE}</a>
+    <nav class="invisible inline sm:visible">
+      <ul class="flex gap-3 text-lg">
+        {
+          headerItems.map((item) => (
+            <li>
+              <a
+                href={item.href}
+                class={isCurrentItem(item.name) ? "underline" : undefined}
+                {...(isCurrentItem(item.name) && ariaCurrent)}
+              >
+                {item.name}
+              </a>
+            </li>
+          ))
+        }
+      </ul>
+    </nav>
+    <MenuIcon>
+      <nav class="inline">
+        <ul class="grid items-end gap-3 text-lg">
+          {
+          headerItems.map((item) => (
+            <li>
+              <a
+                href={item.href}
+                class={isCurrentItem(item.name) ? "underline" : undefined}
+                {...(isCurrentItem(item.name) && ariaCurrent)}
+              >
+                {item.name}
+              </a>
+            </li>
+          ))
+          }
+        </ul>
+      </nav>
+    </MenuIcon>
+  </div>
 </header>
