--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,6 @@ import { SITE_DESCRIPTION } from "../consts";
   <h2>筆者について</h2>
   <p>
     1994年5月生まれ。第一三共株式会社にて MR として数年勤めたのち、Web
-    サービスの開発に興味を持ち2019年8月にキャリアチェンジしました。現在はメドピア株式会社に所属しております。
+    サービスの開発に興味を持ち2019年8月にキャリアチェンジしました。
   </p>
 </Layout>
